<resources>
    <string name="app_name">ZocoNut-Assignment</string>
    <string name="login_title">Login to app</string>
    <string name="login_subtitle">
        <font color="#00c988"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_mail">Your email or username</string>
    <string name="login_pass">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_acc">
        I don\'t have an account <font color="#00c988"><b>Register</b></font>
    </string>

    <string name="register_title">Create an Account</string>
    <string name="register_subtitle">
        <font color="#00c988"><b>Register</b></font> to get started with the app.
    </string>
    <string name="register_fullname">Your Full name</string>
    <string name="register_email">Your Email</string>
    <string name="register_c_password">Confirm Password</string>
    <string name="register_username">Your username</string>
    <string name="register_have_acc">I already have an Account <font color="#00c988"><b>Login</b></font></string>

    <string name="btnlogin">Login</string>
    <string name="btnregister">Register</string>
    <string name="logoutbtn">Logout</string>

    <string name="home_title">Hello,</string>
    <string name="home_subtitle">Welcome to Dashboard</string>

    <string name="reset_title">Reset your password</string>
    <string name="reset_subtitle">
        <font color="#00c988"><b>Reset Password</b></font> if you forgot your password.
    </string>
    <string name="btn_reset">Reset Password</string>
    <string name="back_login">
        Back to <font color="#00c988"><b>Login</b></font>
    </string>

    <string name="okay">Okay</string>
    <string name="i_understand">I understand</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="warning_title">Warning</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="error_title">Error</string>
    <string name="network_error_title">Oops! something went wrong</string>
    <string name="network_error_text">You\'re not connected with Internet! Check your connection and retry.</string>
    <string name="success_title">Success</string>
    <string name="info_title">Attention</string>
</resources>
